#2444 Minor simplification for stream conversion into a list